rust-examples/tests/compile-fail/Rule_10_3.rs
#![deny(clippy)]
#[deny(warnings)]

fn main() {
    let x: u32 = 2;
    let y: u16 = x;
    println!("{}, {}", x, y);
}
